this commit will add roles

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,8 +33,14 @@
             {% endif %}
         {% endwith %}
 
+        <!-- Navbar block  --> 
+        {% block navbar %}
+        {% include 'navbar.html' %}
+        {% endblock %}
 
-    <body>
+    </head>
+
+    <body class="container-fluid">
         
         {% block content %}
                 
