--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -33,7 +33,7 @@
                     <a class="navbar-brand nav-link dropdown-item" href="#" style="color:black; font-weight:bolder;">{{current_user.username}}</a></<a>
                     <a class="navbar-brand nav-link dropdown-item" href="#" style="color:black; font-weight:bolder;">Sign out</a></<a>
                     {% else %}
-                    <a class="navbar-brand nav-link dropdown-item" href="#" style="color:black; font-weight:bolder;">Log in</a></<a>
+                    <a class="navbar-brand nav-link dropdown-item" href="{{url_for('auth.login')}}" style="color:black; font-weight:bolder;">Log in</a></<a>
                     <a class="navbar-brand nav-link dropdown-item" href="{{url_for('auth.register')}}" style="color:black; font-weight:bolder;">Sign Up</a></<a>
                     {%endif%}
                 </ul>
