--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -19,8 +19,6 @@
             <a class="nav-link" href="/">Home
                 <span class="sr-only">(current)</span>
             </a>
-            
-    
             <!-- Dropdown -->
             <li class="nav-item dropdown" style="margin-left: 1600px">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
@@ -29,9 +27,9 @@
             <div class="dropdown-menu dropdown-menu-right dropdown-primary" aria-labelledby="navbarDropdownMenuLink-4" >
                 <ul class="nav navbar-nav navbar-right" >
                     {% if current_user.is_authenticated %}
-                    <a class="navbar-brand nav-link dropdown-item" href="#" style="color:black; font-weight:bolder; ">Profile</a></<a>
+                    <a class="navbar-brand nav-link dropdown-item" href="{{url_for('main.profile',uname=current_user.username)}}" style="color:black; font-weight:bolder; ">Profile</a></<a>
                     <a class="navbar-brand nav-link dropdown-item" href="#" style="color:black; font-weight:bolder;">{{current_user.username}}</a></<a>
-                    <a class="navbar-brand nav-link dropdown-item" href="#" style="color:black; font-weight:bolder;">Sign out</a></<a>
+                    <a class="navbar-brand nav-link dropdown-item" href="{{url_for('auth.logout')}}" style="color:black; font-weight:bolder;">Logout</a></<a>
                     {% else %}
                     <a class="navbar-brand nav-link dropdown-item" href="{{url_for('auth.login')}}" style="color:black; font-weight:bolder;">Log in</a></<a>
                     <a class="navbar-brand nav-link dropdown-item" href="{{url_for('auth.register')}}" style="color:black; font-weight:bolder;">Sign Up</a></<a>
