--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,10 +1,12 @@
-{% macro displayBlogs(blogs_list)%}
-    {%for blog in blogs_list%}
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 review-card">
-            <div class="well well-lg">
-                <h4>{{blog.blog_title}}</h4>
-                <p>{{blog.blog_content| truncate(100)}}</p>
-                <p>Written by:  {{blog.user.username}} <a href="/blog/{{blog.id}}" class="btn btn-primary pull-right">Read</a> </p>
+{% macro displayBlogs(blogs)%}
+    {%for blog in blogs%}
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 " style="margin-top: 30px">
+            <div class="card">
+                    <br>
+                    <h4 class="card-header" >{{blog.blog_title}}</h4>
+                    <br>
+                    <p class="card-body" >{{blog.blog_content| truncate(100)}}</p>
+                    <p class="card-footer" >Written by:  {{blog.username}} <a href="/blog/{{blog.id}}" class="btn btn-primary pull-right">Read</a> </p>
             </div>
         </div>
     {%endfor%}
@@ -13,8 +15,10 @@
 {%macro displayComments(comments_list)%}
     {%for comment in comments_list%}
         <div class="col-md-12">
-            <h5>{{comment.user.username}}</h5>
-            <p>{{comment.comment}}</p>
+            <br>
+            <h5>User: {{comment.user.username}}</h5>
+            <p>Comment: {{comment.comment}}</p>
+            <hr>
         </div>
     {%endfor%}
 {%endmacro%}
