--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -10,22 +10,48 @@
 <!-- Content block -->
 {%block content%}
 <div class="container" style="font-family: 'Indie Flower', cursive;">
-    <div class="row">
-        <h3>{{blog.blog_title}}</h3>
-        <hr>
-        <p>{{blog.blog_content}}</p>
+    <div class="card" style="margin-top: 30px">
+        <h3 class="card-header">{{blog.blog_title}}</h3>
+        
+        <p class="card-body">{{blog.blog_content}}</p>
         <span>
-        <p>Posted on {{date}} by {{blog.user.username| capitalize}}</p>
-        <a href="/blog/{{blog.id}}?like=1">
+        <p class="card-footer">Posted on {{date}} by {{blog.username| capitalize}}</p>
+        <a style="margin-left: 20px" href="/blog/{{blog.id}}?like=1">
             <i class="far fa-thumbs-up"></i>
         </a>{{blog.likes}} <a href="/blog/{{blog.id}}?dislike=1">
             <i class="far fa-thumbs-down"></i>
         </a>{{blog.dislikes}}</span>
-
+        <br>
+        {% if blog.username == current_user.username %}
+            <div>
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('main.update_blog', id=blog.id) }}">Update</a>
+                <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
+            </div>
+        {% endif %}
     </div>
-    <div class="row">
-        <h4>Comments</h4>
-        <hr>
+
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Delete Blog?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <form action="{{ url_for('main.delete_blog', id=blog.id) }}" method="POST">
+                <input class="btn btn-danger" type="submit" value="Delete">
+                </form>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top: 20px">
+        <h4 class="card-header">Comments</h4>
+        
         {% if current_user.is_authenticated %}
             {{ wtf.quick_form(comment_form) }}
         {%endif%}
