--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -20,7 +20,7 @@
                 <span class="sr-only">(current)</span>
             </a>
             <!-- Dropdown -->
-            <li class="nav-item dropdown" style="margin-left: 1600px">
+            <li class="nav-item navbar-end dropdown" style="margin-left: 1600px">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-user"></i> Profile </a>
